<resources>
    <string name="app_name">PlastPlukk</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="forside_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="velg_omrade">Velg type område:</string>
    <string name="fjell">Fjell</string>
    <string name="skog">Skog</string>
    <string name="elv">Elv</string>
    <string name="kyst">Kyst</string>
    <string name="innsjo">Innsjø</string>
    <string name="boligområde">Boligområde</string>

    <string name="industri_handel">Industri/Handel</string>
    <string name="skole_fritid">Skole/Fritidsområde</string>
    <string name="dyrket_mark_landbruk">Dyrket mark/Landbruk</string>
    <string name="vei">Vei</string>


    <string name="ga_videre">Gå videre </string>
    <string name="velg_detaljer">Velg detaljer</string>
    <string name="velg_plasttype">Velg plasttype:</string>
    <string name="velg_storrelse">Velg størrelse:</string>
    <string name="ta_bilde">Ta bilde</string>
    <string name="last_opp_bilde">Last opp bilde</string>
    <string name="brukernavn">Brukernavn</string>
    <string name="passord">Passord</string>
    <string name="login">Login</string>
    <string name="registrer_her">Ikke bruker? Registrer her!</string>
    <string name="log_out">Logg ut</string>
    <string name="gjenta_passord">Gjenta passord</string>
    <string name="registrer">Registrer</string>
    <string name="poser">Poser</string>
    <string name="flasker_og_beholdere"><![CDATA[Flasker & Beholdere]]></string>
    <string name="redskap">Redskap</string>
    <string name="emballasje">Emballasje</string>
    <string name="diverse">Diverse</string>
    <string name="plast_plukk">Plast Plukk</string>
    <string name="apne_kamera">Åpne kamera</string>
    <string name="ny_plast">Plukk</string>
    <string name="forside">Forside</string>
    <string name="min_profil">Min profil</string>
    <string name="innstillinger">Innstillinger</string>
    <string name="feil_passord">Feil passord</string>
    <string name="feil_ved_innlogging">Feil ved innlogging</string>
    <string name="fyll_ut_alle_felt">Vennligst fyll ut alle feltene</string>
    <string name="ikke_gyldig_mail">Ikke gyldig email</string>
    <string name="passord_sjekk">Passordet må minst være 6 symboler, ha minst 1 tall og minst 1 bokstav. Symboler er ikke tillatt</string>
    <string name="passord_match">Passordene matcher ikke</string>
    <string name="registrering_feilet">Registrering feilet:</string>
    <string name="prov_igjen">Prøv igjen</string>
    <string name="velg_minst_en_område">Vennligst velg minst et type område.</string>
    <string name="feilet">Feilet</string>
    <string name="ta_nytt_bilde">Ta nytt bilde</string>
    <string name="bilde_lastet_opp">Lastet opp vellykket!</string>
    <string name="alle_rettigheter_er_godtatt">Alle rettighether er godtatt fra bruker</string>
    <string name="pose">Pose</string>
    <string name="velg_type_">Velg type</string>
    <string name="stor_plastpose">Stor plastpose</string>
    <string name="middels_plastpose">Middels plastpose</string>
    <string name="liten_plastpose">Liten plastpose</string>
    <string name="godteriemballasje">Godteriemballasje</string>
    <string name="diverse_matemballasje">Diverse matemballasje</string>
    <string name="nettstrompe">Nettstrømpe</string>
    <string name="plastfilm">Plastfilm</string>
    <string name="flaske">Flaske</string>
    <string name="plastflaske">Plastflaske</string>
    <string name="kanne">Kanne</string>
    <string name="tonne">Tønne</string>
    <string name="botte_boks">Bøtte/Boks</string>
    <string name="snus">Snusboks</string>
    <string name="kork_lokk">Kork/lokk</string>
    <string name="annet">Annet</string>
    <string name="servise">Servise</string>
    <string name="kopper_plastglass">Kopper/Plastglass</string>
    <string name="tallerken">Tallerken</string>
    <string name="bestikk">Bestikk</string>
    <string name="fiskegarn">Fiskegarn</string>
    <string name="fiskesnore">Fiskesnøre</string>
    <string name="lighter">Lighter</string>
    <string name="tau_trad">Tau/Tråd</string>
    <string name="bekledning">Bekledning</string>
    <string name="riflehylser">Riflehylser</string>
    <string name="ballonger">Ballonger</string>
    <string name="bildeler">Bildeler</string>
    <string name="div_kroppspleie">Diverse kroppspleie</string>
    <string name="dumpet_avfall">Blandet, dumpet avfall</string>
    <string name="endreinnstillinger">Endre innstillinger</string>
    <string name="no_internet">Du er ikke koblet til internett.</string>
    <string name="aktiver_gps">Aktiver GPS for å fortsette.</string>
    <string name="endre_instillinger">Endre innstillinger</string>
    <string name="venter_gps">Venter på GPS. Vennligst vent noen sekunder.</string>
    <string name="mobilDataVarsel">Du bruker nå mobildata. Dette kan medføre ekstra kostnader ved bruk av denne appen.</string>
    <string name="ok">OK</string>
    <string name="gotowebpage">Gå til nettsted</string>
    <string name="registrering_vellykket">Registrering Vellykket!</string>
    <string name="your_registration">Dine valg: </string>
    <string name="category">Kategori: </string>
    <string name="type">Type: </string>
    <string name="size">Størrelse: </string>
    <string name="location">Lokasjon: </string>
    <string name="confirm_registration">Send inn!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picked_plastic">Du har plukket</string>
    <string name="username">Brukernavn:</string>
    <string name="kun_velge_3">Du kan maks velge 3 områder</string>
    <string name="pick_more_button">Plukk mer</string>
    <string name="endre_passord">Endre passord</string>
    <string name="endring_vellykket">Endring vellykket</string>
    <string name="jeg_har_lest_og_akseptert_vilk_rene">Jeg har lest og akseptert vilkårene</string>
</resources>
