<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".registration.AreaActivity"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/checkBoxes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".72"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:text="@string/velg_omrade"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/VelgPlastTekst" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".17"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/fjellCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:text="@string/fjell"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />

            <CheckBox
                android:id="@+id/skogCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:text="@string/skog"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".17"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textColor="@color/colorWhite"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/elvCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:onClick="checkBoxes"
                android:text="@string/elv"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />

            <CheckBox
                android:id="@+id/kystCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:text="@string/kyst"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".17"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/innsjøCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:onClick="checkBoxes"
                android:text="@string/innsjo"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />

            <CheckBox
                android:id="@+id/veiCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:onClick="checkBoxes"
                android:text="@string/vei"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".17"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/industriHandelCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:onClick="checkBoxes"
                android:text="@string/industri_handel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize"

                />

            <CheckBox
                android:id="@+id/skoleFritidCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:onClick="checkBoxes"
                android:text="@string/skole_fritid"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".17"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <CheckBox
                android:id="@+id/dyrketMarkLandbrukCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:onClick="checkBoxes"
                android:text="@string/dyrket_mark_landbruk"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />

            <CheckBox
                android:id="@+id/boligCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".4"
                android:background="@drawable/checkbox_selector"
                android:onClick="checkBoxes"
                android:text="@string/boligområde"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/ButtonTextSize" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/Feilmelding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".17"
        android:text="@string/ta_bilde"
        android:drawableStart="@drawable/ic_photo_camera_black_24dp"
        android:textSize="@dimen/ButtonTextSize"
        android:onClick="openKamera"/>

</LinearLayout>