<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/login_background"
    tools:context=".registration.CategoryActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight=".1"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center_horizontal"
        android:textColor="#FFF"
        android:text="@string/velg_plasttype"
        android:textSize="@dimen/VelgPlastTekst" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_marginLeft="@dimen/VelgPlastMargin"
        android:layout_marginTop="@dimen/VelgPlastMargin"
        android:layout_marginRight="@dimen/VelgPlastMargin">

        <LinearLayout
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/PoserKnapp"
                android:tag="Pose"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:background="@drawable/buttons"
                android:drawableTop="@drawable/bagicon"
                android:fontFamily="@font/quicksand_light"
                android:onClick="velgEgenskaper"
                android:textColor="#FFF"
                android:text="@string/poser"
                android:textSize="@dimen/ButtonTextSize" />

            <Button
                android:id="@+id/FlaskerKnapp"
                android:tag="Flaske"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:background="@drawable/buttons"
                android:drawableTop="@drawable/bottleicon"
                android:fontFamily="@font/quicksand_light"
                android:onClick="velgEgenskaper"
                android:textColor="#FFF"
                android:text="@string/flasker_og_beholdere"
                android:textSize="@dimen/ButtonTextSize" />

            <Button
                android:id="@+id/RedskapKnapp"
                android:tag="Redskap"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:background="@drawable/buttons"
                android:drawableTop="@drawable/toolsicon"
                android:fontFamily="@font/quicksand_light"
                android:onClick="velgEgenskaper"
                android:textColor="#FFF"
                android:text="@string/redskap"
                android:textSize="@dimen/ButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/EmballasjeKnapp"
                android:tag="Emballasje"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:background="@drawable/buttons"
                android:drawableTop="@drawable/emballasjeicon"
                android:fontFamily="@font/quicksand_light"
                android:onClick="velgEgenskaper"
                android:textColor="#FFF"
                android:text="@string/emballasje"
                android:textSize="@dimen/ButtonTextSize" />

            <Button
                android:id="@+id/ServiseKnapp"
                android:tag="Servise"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:background="@drawable/buttons"
                android:drawableTop="@drawable/forkandknifeicon"
                android:fontFamily="@font/quicksand_light"
                android:onClick="velgEgenskaper"
                android:textColor="#FFF"
                android:text="@string/servise"
                android:textSize="@dimen/ButtonTextSize" />

            <Button
                android:id="@+id/DiverseKnapp"
                android:tag="Diverse"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:background="@drawable/buttons"
                android:fontFamily="@font/quicksand_light"
                android:onClick="velgEgenskaper"
                android:textColor="#FFF"
                android:text="@string/diverse"
                android:textSize="@dimen/ButtonTextSize" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>