<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/category_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:contentDescription="background"
        android:scaleType="centerCrop"
        android:scaleX="-1"
        android:src="@drawable/main_background_blurred" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    style="@style/my_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.36"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="Plast\nplukk"
                    android:textSize="60sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etUserLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".11"
                    android:textColorHint="@color/colorWhiteOpacity">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etUserLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_border"
                        android:hint="@string/brukernavn"
                        android:inputType="textShortMessage"
                        android:paddingStart="10dp"
                        android:textColor="@color/colorWhite" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".11"
                    android:textColorHint="@color/colorWhiteOpacity"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_border"
                        android:hint="@string/passord"
                        android:imeOptions="actionGo"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColor="@color/colorWhite" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/bLogin"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_buttons_selector"
                    android:fontFamily="@font/comfortaa_bold"
                    android:onClick="logIn"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/registerLink"
            style="@style/my_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="sendToRegister"
            android:text="@string/registrer_her"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>
</FrameLayout>

    <!--
    Fant textinputlayout kode her:
    https://stackoverflow.com/questions/3685790/how-to-switch-between-hide-and-view-password
-->